Fixed footer links display issue were social media links did not display in line on mobile devices

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -194,7 +194,7 @@ footer > a {
 	color: rgb(207, 209, 217);
 	text-decoration: none;
 	padding: 0 15px;
-	font-size: 1.2rem;
+	font-size: 0.8rem;
 }
 
 footer > p {
